src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>APS_Case Support Record Type</fullName>
        <description>Support Record Type for the Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LASH_QDE</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Confirmed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Request Sent</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>APS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HCP</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Address__c</fullName>
        <label>Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Address_count__c</fullName>
        <formula>APS_HCP__r.APS_Primary_address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APS Address count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APS_Amount_To_Dispense__c</fullName>
        <label>Amount To Dispense</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Assesment_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APS_Assistance_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assistance Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APS_BI_Nurse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BI Nurse</description>
        <label>BI Nurse</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Call_to_Report_Benefits__c</fullName>
        <description>Updated Via Integration</description>
        <label>Call to Report Benefits</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Call_to_Schedule_Assesment__c</fullName>
        <description>Updated Via Integration</description>
        <label>Call to Schedule Assesment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Call_to_Schedule_FDO__c</fullName>
        <description>Updated Via Integration</description>
        <label>Call to Schedule FDO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Case_Created__c</fullName>
        <label>Case created</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Case_Email_Id__c</fullName>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>Case Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>APS_Case_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Case_Workflow_Steps_Completed__c</fullName>
        <label>Case Workflow Steps Completed</label>
        <summaryFilterItems>
            <field>APS_Case_Workflow_Step__c.APS_Status__c</field>
            <operation>equals</operation>
            <value>Completed, Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>APS_Case_Workflow_Step__c.APS_Related_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APS_Case_Workflow_Steps_Total__c</fullName>
        <label>Case Workflow Steps Total</label>
        <summaryForeignKey>APS_Case_Workflow_Step__c.APS_Related_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APS_Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Disability/Permanent Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congenital Anomaly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required Intervention (Devices)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Serious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mild</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Classification__c</fullName>
        <description>Classification of Patients</description>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Pedicatric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Clinical_Trail_Name__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <description>Clinical Trail Name</description>
        <label>Clinical Trial Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Closed_On__c</fullName>
        <description>Closed On</description>
        <label>Closed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Co_Pay_Approval_Letter_Mailed__c</fullName>
        <description>Updated Via Integration</description>
        <label>Co-Pay Approval Letter Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Completed_Electrocardiogram_ECG__c</fullName>
        <description>Completed Electrocardiogram (ECG)</description>
        <label>Completed Electrocardiogram (ECG)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Completed_Liver_Function_Test__c</fullName>
        <description>Completed Date of Liver Function Test</description>
        <label>Completed Liver Function Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Congratulations_Call__c</fullName>
        <description>Auto Updated When Task is Completed</description>
        <label>Congratulations Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Current_Pharmacy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Pharmacy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pharmacy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Current Pharmacy)</relationshipLabel>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Data_Source__c</fullName>
        <label>Data Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_DateTime_Closed_c__c</fullName>
        <label>DateTime Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APS_DateTime_Opened_c__c</fullName>
        <label>DateTime Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APS_Date_Occurred__c</fullName>
        <description>Date the Adverse event occurred</description>
        <label>Date Occurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_DescriptionEC__c</fullName>
        <description>Created for Email to Case to Display Description</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APS_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Disease_State__c</fullName>
        <description>Disease State</description>
        <label>Disease State</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Dispense_Starter_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispense Starter Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APS_ECG_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECG Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APS_Electrocardiogram_ECG__c</fullName>
        <description>Electrocardiogram (ECG)</description>
        <label>Electrocardiogram (ECG)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Expiration_Date__c</fullName>
        <description>Expiration Date, if given by customer</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_FDO_Completed__c</fullName>
        <description>Updated Via Integration</description>
        <label>FDO Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_FDO_Date__c</fullName>
        <label>FDO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Field_Nurse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field Nurse</description>
        <label>Field Nurse</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_First_Day_On_Status__c</fullName>
        <description>Will show the progress of First Day On Workflow Step(s). Note that multiple categories can be &apos;In Progress&apos; at the same time</description>
        <inlineHelpText>Will show the progress of First Day On Workflow Step(s). Note that multiple categories can be &apos;In Progress&apos; at the same time</inlineHelpText>
        <label>First Day On Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_First_Dose_Observation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Dose Observation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APS_Follow_Up_Allowed__c</fullName>
        <label>Follow Up Allowed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Followup_WF_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Followup WF Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APS_Graduation_Call__c</fullName>
        <description>Auto Updated When Task is Completed</description>
        <label>Graduation Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_HCP__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>HCP</description>
        <label>Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (HCP)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_ICD_10_Code__c</fullName>
        <label>ICD-10 Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_ICD_9_Code__c</fullName>
        <label>ICD-9 Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_IDC_9_Code__c</fullName>
        <label>IDC-9 Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Injection_Status__c</fullName>
        <description>To track the number of injection completed and for indicator position in Adherence VF page</description>
        <label>Injection Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APS_Insurance_Coverage_Status__c</fullName>
        <description>Will show the progress of Insurance Coverage Workflow Step(s). Note that multiple categories can be &apos;In Progress&apos; at the same time</description>
        <inlineHelpText>Will show the progress of Insurance Coverage Workflow Step(s). Note that multiple categories can be &apos;In Progress&apos; at the same time</inlineHelpText>
        <label>Insurance Coverage Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Letter_Mark_Calendar_for_FDO_Mailed__c</fullName>
        <description>Updated Via Integration</description>
        <label>Letter Mark Calendar for FDO Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Liver_Function_Test__c</fullName>
        <description>Liver Function Test</description>
        <label>Liver Function Test</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Liver_Test_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Liver Test Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APS_Lot__c</fullName>
        <description>Lot #, if given by customer</description>
        <label>Lot #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Medical_Assesment_Status__c</fullName>
        <description>Will show the progress of Medical Assesment Workflow Step(s). Note that multiple categories can be &apos;In Progress&apos; at the same time</description>
        <inlineHelpText>Will show the progress of Medical Assesment Workflow Step(s). Note that multiple categories can be &apos;In Progress&apos; at the same time</inlineHelpText>
        <label>Medical Assesment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Motivation_Assesments_Call__c</fullName>
        <description>Auto Updated When Task is Completed</description>
        <label>Motivation Assesments Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Motivation_Assesments__c</fullName>
        <description>Auto Updated When Task is Completed</description>
        <label>Motivation Assesments Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Motivation_FDO_Call_1__c</fullName>
        <description>Auto Updated When Task is Completed</description>
        <label>Motivation FDO Call 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Motivation_FDO_Call_2__c</fullName>
        <description>Auto Updated When Task is Completed</description>
        <label>Motivation FDO Call 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Motivation_PA_Appeals_Call__c</fullName>
        <description>Auto Updated When Task gets Completed</description>
        <label>Motivation PA/Appeals Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Motivator_Nurse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Motivator Nurse</description>
        <label>Motivator Nurse</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Need_Assistance_With_Prior_Author__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Assistance With Prior Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APS_Need_Self_Admin_Training__c</fullName>
        <label>Need Self Admin Training</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_No_of_Days__c</fullName>
        <description>Created for Report</description>
        <formula>TODAY()- DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Created Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APS_Office_Hours__c</fullName>
        <label>Office Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Patient_ID__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Patient_Name__c</fullName>
        <formula>if( TEXT(Account.Salutation) &lt;&gt; &apos;&apos;, TEXT(Account.Salutation) &amp; if(Account.FirstName &lt;&gt; &apos;&apos;, &apos; &apos; &amp; Account.FirstName, &apos;&apos;) &amp; if(Account.LastName &lt;&gt; &apos;&apos;, &apos; &apos; &amp; Account.LastName , &apos;&apos;), &apos;&apos;)</formula>
        <label>Patient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Patient_Navigator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Patient Navigator</description>
        <label>Patient Navigator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Patient_Segmentation__c</fullName>
        <label>Patient Segmentation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>APS_Primary_Product__c</fullName>
        <formula>APS_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product</description>
        <label>Product</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.APS_Patient_Navigator__c</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Program_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Affiliation</label>
        <referenceTo>APS_Program_Affiliation__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Program_Count__c</fullName>
        <formula>APS_Program_Affiliation__r.APS_Program__r.APS_Program_Afltn_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APS_Program_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Name</label>
        <referenceTo>APS_Program__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Program_Name__c</fullName>
        <formula>APS_Program_Affiliation__r.APS_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APS_Program_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Program_Product_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.APS_Program_ID__c</field>
                <operation>equals</operation>
                <valueField>APS_Program_Product_Affiliation__c.APS_Program__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>APS_Program_Product_Affiliation__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Reporter_Name__c</fullName>
        <description>If Reporter Type= Caregiver, reporter Name is Required</description>
        <label>Reporter Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Reporter_Phone__c</fullName>
        <description>If Reporter Type= Caregiver, reporter phone is Required</description>
        <label>Reporter Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>APS_Reporter_Type__c</fullName>
        <label>Reporter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caregiver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Return_Kit_Address__c</fullName>
        <label>Return Kit Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_SP_Traige_Status__c</fullName>
        <description>Will show the progress of SP Traige Workflow Step(s). Note that multiple categories can be &apos;In Progress&apos; at the same time</description>
        <inlineHelpText>Will show the progress of SP Traige Workflow Step(s). Note that multiple categories can be &apos;In Progress&apos; at the same time</inlineHelpText>
        <label>SP Triage Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_SRF_Intake_Status__c</fullName>
        <description>Will show the progress of Enrollment Intake Workflow Step(s). Note that multiple categories can be &apos;In Progress&apos; at the same time</description>
        <inlineHelpText>Will show the progress of Enrollment Intake Workflow Step(s). Note that multiple categories can be &apos;In Progress&apos; at the same time</inlineHelpText>
        <label>Enrollment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Safety_ID__c</fullName>
        <description>Autonumber. Do not populate until Send to Safety button is clicked</description>
        <label>Safety ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Scheduled_Electrocardiogram_ECG__c</fullName>
        <description>Scheduled Date of Electrocardiogram</description>
        <label>Scheduled Electrocardiogram (ECG)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Scheduled_Liver_Function_Test__c</fullName>
        <description>Scheduled Liver Function Test</description>
        <label>Scheduled Liver Function Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Secondary_Expiration_Date__c</fullName>
        <description>Optional</description>
        <label>Secondary Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APS_Secondary_Lot__c</fullName>
        <description>Optional</description>
        <label>Secondary Lot #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Secondary_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional</description>
        <label>Secondary Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases (Secondary Product)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APS_Send_Return_Kit__c</fullName>
        <label>Send Return Kit</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_Sent_to_Safety__c</fullName>
        <label>Sent to Safety</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APS_Site_Contact_Name__c</fullName>
        <label>Site Contact Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Site_Name__c</fullName>
        <label>Site Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Source__c</fullName>
        <description>Default to Phone</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APS_State_From_Account__c</fullName>
        <formula>APS_HCP__r.APS_Territory_Address__c</formula>
        <label>State From Account</label>
        <type>Text</type>
    </fields>
</CustomObject>